<!--
  ~ Copyright 2018 Stéphane Baiget
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>

    <string name="app_name">L\'Entract\'</string>

    <string name="menu_today">Séances</string>
    <string name="menu_coming">Programme</string>
    <string name="menu_information">Infos</string>
    <string name="menu_settings">Paramètres</string>

    <string name="on_screen_schedule">Horaire : %1$s</string>
    <string name="on_screen_duration">Durée : %1$s</string>
    <string name="on_screen_original_version">VOST</string>
    <string name="on_screen_three_dimension">3D</string>
    <string name="on_screen_no_movie">Pas de séance ce jour</string>

    <string name="details_date_with_time">%1$s à %2$s</string>
    <string name="details_duration">%1$s</string>
    <string name="details_production_year">Sortie en &lt;b>%1$s&lt;/b></string>
    <string name="details_director">De &lt;b>%1$s&lt;/b></string>
    <string name="details_cast">Avec &lt;b>%1$s&lt;/b></string>
    <string name="details_teaser">Bande annonce</string>
    <string name="details_add_agenda">Ajouter à l\'agenda</string>
    <string name="details_title_next_movies">Autres séances</string>
    <string name="details_title_synopsis">Synopsis</string>
    <string name="details_under_twelve_notice">Interdit aux moins de 12 ans</string>
    <string name="details_explicit_content_notice">Des scènes, des propos ou des images peuvent heurter la sensibilité des spectateurs</string>
    <string name="details_no_next_movies">Aucune</string>

    <string name="schedule_title">Les horaires</string>
    <string name="schedule_no_movie_message">Pas de séances à venir</string>

    <string name="information_title">Informations pratiques</string>
    <string name="information_place_name">Cinéma L\'Entract\'</string>
    <string name="information_address">Avenue Lazare Carnot\n31330 Grenade</string>
    <string name="information_navigate">M\'y rendre</string>
    <string name="information_call">Appeler</string>
    <string name="information_website">Site web</string>
    <string name="information_facebook">Facebook</string>

    <string name="settings_title">Paramètres</string>
    <string name="settings_event">Afficher les évènements</string>
    <string name="settings_media">Télécharger les images uniquement sur WiFi</string>
    <string name="settings_system_mode">Thème en fonction du système</string>
    <string name="settings_light_mode">Thème clair</string>
    <string name="settings_dark_mode">Thème sombre</string>
    <string name="settings_battery_mode">Thème en fonction de la batterie</string>
    <string name="settings_mode_change">Changer</string>

    <string-array name="settings_theme_modes">
        <item>@string/settings_system_mode</item>
        <item>@string/settings_light_mode</item>
        <item>@string/settings_dark_mode</item>
        <item>@string/settings_battery_mode</item>
    </string-array>

    <string name="event_close">Fermer</string>
</resources>