<!--
  ~ Copyright 2019 Stéphane Baiget
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/on_screen"
        android:icon="@drawable/selector_nav_on_screen"
        android:title="@string/menu_today"
        />

    <item
        android:id="@+id/schedule"
        android:icon="@drawable/selector_nav_schedule"
        android:title="@string/menu_coming"
        />
    <item
        android:id="@+id/information"
        android:icon="@drawable/selector_nav_info"
        android:title="@string/menu_information"
        />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/selector_nav_settings"
        android:title="@string/menu_settings"
        />
</menu>