<!--
  ~ Copyright 2019 Stéphane Baiget
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            tools:title="@string/app_name"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_padding_size_medium"
            android:paddingBottom="@dimen/margin_padding_size_medium"
            >

            <ImageView
                android:id="@+id/cover"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:importantForAccessibility="no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/director"
                app:layout_constraintWidth_percent="0.3"
                tools:adjustViewBounds="true"
                tools:scaleType="fitCenter"
                tools:srcCompat="@drawable/ic_movie_black_24dp"
                tools:tint="?colorOnPrimary"
                />

            <ImageView
                android:id="@+id/originalVersion"
                style="?textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:layout_marginBottom="@dimen/margin_padding_size_medium"
                android:importantForAccessibility="no"
                android:tint="?colorOnBackground"
                app:layout_constraintStart_toStartOf="@id/duration"
                app:layout_constraintTop_toBottomOf="@id/duration"
                app:srcCompat="@drawable/ic_original_version_black_24dp"
                />

            <ImageView
                android:id="@+id/threeDimension"
                style="?textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:layout_marginBottom="@dimen/margin_padding_size_medium"
                android:importantForAccessibility="no"
                android:tint="?colorOnBackground"
                app:layout_constraintStart_toEndOf="@id/originalVersion"
                app:layout_constraintTop_toBottomOf="@id/duration"
                app:srcCompat="@drawable/ic_three_dimension_black_24dp"
                />

            <ImageView
                android:id="@+id/underTwelve"
                style="?textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:layout_marginBottom="@dimen/margin_padding_size_medium"
                android:importantForAccessibility="no"
                android:tint="?colorOnBackground"
                app:layout_constraintStart_toEndOf="@id/threeDimension"
                app:layout_constraintTop_toBottomOf="@id/duration"
                app:srcCompat="@drawable/ic_under_twelve_black_24dp"
                />

            <ImageView
                android:id="@+id/explicitContent"
                style="?textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:layout_marginBottom="@dimen/margin_padding_size_medium"
                android:importantForAccessibility="no"
                android:tint="?colorOnBackground"
                app:layout_constraintStart_toEndOf="@id/underTwelve"
                app:layout_constraintTop_toBottomOf="@id/duration"
                app:srcCompat="@drawable/ic_explicit_content_black_24dp"
                />

            <ImageView
                android:id="@+id/artMovie"
                style="?textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:layout_marginBottom="@dimen/margin_padding_size_medium"
                android:importantForAccessibility="no"
                android:tint="?colorOnBackground"
                app:layout_constraintStart_toEndOf="@id/explicitContent"
                app:layout_constraintTop_toBottomOf="@id/duration"
                app:srcCompat="@drawable/ic_art_movie_24dp"
                />

            <LinearLayout
                android:id="@+id/nextContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_size_small"
                android:orientation="vertical"
                android:showDividers="middle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nextTitle"
                />

            <TextView
                android:id="@+id/title"
                style="?textAppearanceHeadline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Ceci est un titre de film très long mais vraiment très long"
                />

            <TextView
                android:id="@+id/director"
                style="?textAppearanceBody2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cover"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:text="De Dog Bob"
                />

            <TextView
                android:id="@+id/cast"
                style="?textAppearanceBody2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginTop="@dimen/margin_padding_size_small"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cover"
                app:layout_constraintTop_toBottomOf="@id/director"
                tools:text="Avec Pepette, Pipitte, Papatte et Puputte"
                />

            <TextView
                android:id="@+id/year"
                style="?textAppearanceBody2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginTop="@dimen/margin_padding_size_small"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cover"
                app:layout_constraintTop_toBottomOf="@id/cast"
                tools:text="Sortie en 1985"
                />

            <TextView
                android:id="@+id/genre"
                style="?textAppearanceBody2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginTop="@dimen/margin_padding_size_small"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cover"
                app:layout_constraintTop_toBottomOf="@id/year"
                tools:text="Kung-fu"
                />

            <TextView
                android:id="@+id/duration"
                style="?textAppearanceBody2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginTop="@dimen/margin_padding_size_small"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cover"
                app:layout_constraintTop_toBottomOf="@id/genre"
                tools:text="Durée : 1h30"
                />

            <TextView
                android:id="@+id/synopsisTitle"
                style="?textAppearanceHeadline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginTop="@dimen/margin_padding_size_large"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                android:maxLines="1"
                android:text="@string/details_title_synopsis"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/infoBarrier"
                />

            <TextView
                android:id="@+id/synopsis"
                style="?textAppearanceBody1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/synopsisTitle"
                tools:text="@tools:sample/lorem"
                />

            <TextView
                android:id="@+id/underTwelveNotice"
                style="?textAppearanceBody1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                android:text="@string/details_under_twelve_notice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/synopsis"
                />

            <TextView
                android:id="@+id/explicitContentNotice"
                style="?textAppearanceBody1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                android:text="@string/details_explicit_content_notice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/underTwelveNotice"
                />

            <TextView
                android:id="@+id/nextTitle"
                style="?textAppearanceHeadline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginTop="@dimen/margin_padding_size_large"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                android:text="@string/details_title_next_movies"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/explicitContentNotice"
                />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/infoBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="cover,originalVersion,threeDimension,underTwelve,explicitContent,artMovie"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/teaser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginTop="@dimen/margin_padding_size_large"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                android:text="@string/details_teaser"
                app:icon="@drawable/ic_youtube_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nextContainer"
                app:layout_constraintWidth_percent="0.6"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/agenda"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginTop="@dimen/margin_padding_size_small"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                android:text="@string/details_add_agenda"
                app:icon="@drawable/ic_calendar_add_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/teaser"
                app:layout_constraintWidth_percent="0.6"
                app:layout_goneMarginTop="@dimen/margin_padding_size_medium"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@id/loadingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <com.cinema.entract.core.widget.ErrorView
        android:id="@+id/errorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>